<resources>
    <string name="app_name" translatable="false">EasyQuiz</string>
    <string name="start">START TEST</string>
    <string name="quiz_name">Test about Android</string>

    <string name="question_1">What is activity?</string>
    <string name="answer_to_1_1">This is a repository for fragments</string>
    <string name="answer_to_1_2">This is a set of text and pictures</string>
    <string name="answer_to_1_3">This is a set of text, pictures and videos</string>

    <string name="question_3">Which class is responsible for tooltips?</string>
    <string name="answer_to_3_1" translatable="false">Message</string>
    <string name="answer_to_3_2" translatable="false">Text</string>
    <string name="answer_to_3_3" translatable="false">Hint</string>
    <string name="answer_to_3_4" translatable="false">Alert</string>
    <string name="answer_to_3_5" translatable="false">+Toast</string>
    <string name="button_quiz_text">FINISH TEST</string>
    <string name="button_result_text">Try again</string>
    <string name="result_title">Your result:</string>
    <string name="answer_to_1_4">This is a collection of all kinds of components</string>
    <string name="answer_to_1_5">This is where the browser displays</string>
    <string name="question_2">How many virtual devices can I add?</string>
    <string name="answer_to_2_1">No more than 10</string>
    <string name="answer_to_2_2">You can add unlimited quantities</string>
    <string name="answer_to_2_3">From 1 to 3</string>
    <string name="answer_to_2_4">No more than 5</string>
    <string name="button_date">Enter your birthday\t\t\t\t</string>
    <string name="date_dialoge_text">Enter your date of birth</string>
</resources>